# hchat-sdk-python

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
examples/: basic.py  stream_example.py
src/hchat_sdk/: __init__.py  capabilities.py  client.py
src/hchat_sdk/providers/: anthropic.py  azure.py  base.py  google.py  openai.py
src/hchat_sdk/resources/: messages.py  models.py
src/hchat_sdk/types/: content.py  request.py  response.py
tests/: test_client.py  test_messages.py  test_models.py  test_validation.py  test_verification.py
